0029939: Modeling Algorithms - add NULL check to BRepGProp_Face::Load()

BRepGProp_Face::Load() has been protected against crash in case of edges without p-curves.